# codex

codex-rs/: Cargo.toml
codex-rs/codebase-search/: Cargo.toml  README.md
codex-rs/codebase-search/src/: chunker.rs  embedding.rs  file_state.rs  file_watcher.rs  lib.rs  main.rs  retriever.rs  symbol.rs  test_data.rs  vector_db.rs  walk_utils.rs
codex-rs/codebase-search/tests/: integration_test.rs  test_utils.rs
codex-rs/core/: Cargo.toml  prompt.md
codex-rs/core/src/: codex.rs  exec.rs  models.rs  openai_tools.rs  plan_tool.rs
codex-rs/macros/: Cargo.toml  README.md
codex-rs/macros/src/: lib.rs
