[package]
name = "codebase-search"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codebase-search"
path = "src/main.rs"

[build-dependencies]
cc="*"

[dependencies]
tree-sitter = "0.25.8"
tree-sitter-rust = "0.23"
tracing = { version = "0.1.41", features = ["log"] }
walkdir = "2"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
qdrant-client = "1.15.0"
uuid = { version = "1.17.0", features = ["v4"] }
crypto = "0.5.1"
sha2 = "0.10"
md5 = "0.8.0"
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"
notify = "8.2.0"
futures = "0.3.31"

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }

[lints]
workspace = true
